--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -21,7 +21,7 @@
                         <div class="col-lg-6 col-md-12 offset-md-0 text-light">
                             <h1 class="wow fadeInUp" data-wow-delay=".5s">Catchy <span class="id-color">text</span>
                                 here</h1>
-                            <p class="lead wow fadeInUp" data-wow-delay=".75s">Additional information</p>
+                            <p class="lead wow fadeInUp" data-wow-delay="0.75s">Additional information</p>
                         </div>
 
                         <div class="col-lg-4 offset-lg-2 text-center wow fadeIn" data-wow-delay=".5s">
