--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,11 @@
                                 <a href="{% url 'home' %}">Home</a>
                             </li>
                             <li>
-                                <a href="">Project lydian</a>
+                                <a href="{% url 'upload_csv' %}">Upload</a>
+
+                            </li>
+                            <li>
+                                <a href="">Examples</a>
 
                             </li>
                            
