--- a/kmApps/templates/kmApps/kmeans_analysis.html
+++ b/kmApps/templates/kmApps/kmeans_analysis.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
 {% block content %}
 
 
@@ -13,7 +14,7 @@
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
                         <div class="col-md-12 text-center">
-                            <h1>Upload csv</h1>
+                            <h3>Select tags</h3>
                             <!-- <p>Awsome Page Teaser Here</p> -->
                         </div>
                     </div>
@@ -26,16 +27,23 @@
     <section class="no-top mt-4">
         <div class="container">
 
-            <div class="content-section col-md-4 offset-4 mt-4">
+            <div class="content-section col-md-8 offset-2 mt-4">
                 <fieldset>
                     <form enctype="multipart/form-data" method="POST">
                         {% csrf_token %}
-                        <fieldset class="form-group">
-        
-                            {{ form|crispy }}
-                        </fieldset>
+
+                        <input type='text' placeholder='Select tags' class='flexdatalist'
+                        data-min-length='1' multiple='multiple' list='languages' name='tagselector'>
+
+                        <datalist id="languages">
+                            {% for tag in available_tags %}
+                            <option value="{{ tag.name }}">{{ tag.name }}</option>
+                            {% endfor %}
+                        </datalist>
+
+
                         <div class="form-group">
-                            <button class="btn btn-outline-info" type="submit">Save</button>
+                            <button class="btn btn-outline-info" type="submit">Select</button>
                         </div>
                     </form>
 
@@ -45,4 +53,13 @@
     </section>
 </div>
 
+
+<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="{% static 'js/jquery.flexdatalist.js' %}"></script>
+
+<script>
+    $('.flexdatalist').flexdatalist({
+        minLength: 1
+    });
+</script>
 {% endblock content %}
