--- a/templates/base.html
+++ b/templates/base.html
@@ -29,14 +29,15 @@
     <link href="{% static 'css/jquery.countdown.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 
+
       <!-- custom additional CSS Files
     ============================================= -->
     <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
-
+    <link href="{% static 'css/jquery.flexdatalist.css' %}" rel="stylesheet" type="text/css" />
     <!-- color scheme -->
     <link id="colors" href="{% static 'css/colors/custom-color-scheme.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/coloring.css' %}" rel="stylesheet" type="text/css" />
-
+    
 
 </head>
 
@@ -69,7 +70,6 @@
 <script src="{% static 'js/jquery.countTo.js' %}"></script>
 <script src="{% static 'js/jquery.countdown.js' %}"></script>
 <script src="{% static 'js/designesia.js' %}"></script>
-
 
 
 </body>
