--- a/file_upload/templates/file_upload/file_listview.html
+++ b/file_upload/templates/file_upload/file_listview.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
+
 {% load static %}
 {% block content %}
-<link href="{% static 'file_upload/dftable.css' %}" rel="stylesheet" type="text/css" />
 
 
 <div class="no-bottom no-top" id="content">
@@ -33,42 +32,26 @@
                 {{ dftable | safe}}
             </div> -->
             <div>
-                <table class="table table-hover table-sm">
-                    <thead class="thead-dark">
+                <table class="table thead-dark table-hover">
+                    <thead>
                         <tr>
-                            {% for column in dfcolumns %}
-                            <th>{{ column }}</th>
-                            {% endfor %}
+                            <th>id</th>
+                            <th>File</th>
+                            <th>Uploaded at</th>
                         </tr>
 
                     </thead>
                     <tbody>
-
-                        {% for key, value in data.items %}
+                        {% for file in files %}
                         <tr>
-                            {% for key2, value2 in value.items %}
-                            <td> {{ value2 }}</td>
-
-                            {% endfor %}
-
+                            <td>{{ file.id }}</td>
+                            <td>{{ file.csvfile.name }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
             </div>
             </table>
-            <div class="content-section col-md-4 offset-4 mt-4">
-                <form method="POST">
-                    {% csrf_token %}
-                    <fieldset class="form-group">
-
-                        {{ form|crispy }}
-                    </fieldset>
-                    <div class="form-group">
-                        <button class="btn btn-outline-info" type="submit">Save</button>
-                    </div>
-            </div>
-            </form>
-
+    
     </section>
 </div>
 
